cabal-version: 2.2
name:
  string
version:
  0.1
synopsis:
  See README for more info
description:
  See README for more info
homepage:
  https://github.com/chessai/string
bug-reports:
  https://github.com/chessai/string/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Text
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.6.5

common com
  build-depends:
    , base
    , byteslice
    , bytebuild
    , bytestring
    , primitive
    , text

library
  import:
    com
  exposed-modules:
    String
    String.Conversions
    String.Folds
    String.Iterate
    String.Type
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    BangPatterns
    CPP
    DerivingStrategies
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MagicHash
    MultiWayIf
    OverloadedStrings
    PackageImports
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    UnboxedTuples
    UnliftedFFITypes
  ghc-options:
    -Wall
    -O2

  extra-libraries:
    simdjson
    stdc++
  include-dirs:
    cbits
  c-sources:
    cbits/validation.cpp
    cbits/encode_utf8.c

test-suite test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  build-depends:
    , base
    , byteslice
    , bytestring
    , hedgehog
    , primitive
    , string
    , text
  main-is:
    Main.hs
  other-modules:
    Conversions
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/string.git
